--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -222,9 +222,10 @@
   }
 }
 
-.features__button-wrapper {
-  width: 260px;
+.features__button {
+  // width: 260px;
   margin: 0 auto;
+  padding-top: 15px;
 
   @media (min-width: @tablet-width) {
     margin-top: auto;
