--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -6,6 +6,7 @@
   width: auto;
   margin: 0 auto;
   padding: 0 30px;
+  padding-top: 24px;
 
   @media (min-width: @tablet-width) {
     padding: 51px 50px 58px 50px;
