--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -2,6 +2,7 @@
   display: block;
   width: 260px;
   min-height: 52px;
+  padding-top: 15px;
   font-weight: bold;
   font-size: 18px;
   line-height: 20px;
