--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -162,6 +162,11 @@
   width: 100%;
   height: 455px;
   border: none;
+  grid-column-start: 1;
+  grid-column-end: -1;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  z-index: 1;
 
   @media (min-width: @tablet-width) {
     height: 457px;
@@ -174,6 +179,54 @@
     grid-column-end: -1;
     grid-row-start: 1;
     grid-row-end: -1;
+  }
+}
+
+.contacts__picture {
+  position: relative;
+  display: block;
+  width: 320px;
+  height: 455px;
+  margin: 0 auto;
+  grid-column-start: 1;
+  grid-column-end: -1;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  z-index: -2;
+
+  @media (min-width: @tablet-width) {
+    width: 768px;
+    height: 457px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 527px;
+    height: 457px;
+    grid-column-start: 2;
+    grid-column-end: -1;
+    grid-row-start: 1;
+    grid-row-end: -1;
+  }
+}
+
+.contacts__pin {
+  position: absolute;
+  width: 69px;
+  height: 100px;
+  bottom: 305px;
+  left: 50%;
+  margin-left: -23px;
+  z-index: -1;
+
+  @media (min-width: @tablet-width) {
+    bottom: 325px;
+    margin-left: -21px;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: 217px;
+    left: 811px;
+    margin-left: 0;
   }
 }
 
