--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -163,6 +163,24 @@
   }
 }
 
+.main-nav--closed .site-list__item {
+  @media (max-width: @mobile-width-only) {
+    display: none;
+  }
+}
+
+.main-nav--closed .user-list__label {
+  @media (max-width: @mobile-width-only) {
+    display: none;
+  }
+}
+
+.main-nav--closed .user-list__cart {
+  @media (max-width: @mobile-width-only) {
+    display: none;
+  }
+}
+
 .main-nav--nojs .main-nav__toggle {
   display: none;
 }
@@ -184,28 +202,26 @@
   display: block;
 }
 
+.main-nav--nojs .site-list__item--desktop {
+  display: none;
+
+  @media (min-width: @desktop-width) {
+    display: block;
+  }
+}
+
 .main-nav--nojs .user-list__label {
+  display: block;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+}
+
+.main-nav--nojs .user-list__search-button {
   display: block;
 }
 
 .main-nav--nojs .user-list__cart {
   display: block;
-}
-
-.main-nav--closed .site-list__item {
-  @media (max-width: @mobile-width-only) {
-    display: none;
-  }
-}
-
-.main-nav--closed .user-list__label {
-  @media (max-width: @mobile-width-only) {
-    display: none;
-  }
-}
-
-.main-nav--closed .user-list__cart {
-  @media (max-width: @mobile-width-only) {
-    display: none;
-  }
 }
