--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -11,6 +11,7 @@
   .reset ();
   width: 142px;
   margin: 0 auto;
+  padding-bottom: 21px;
   list-style: none;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -18,6 +19,7 @@
 
   @media (min-width: @tablet-width) {
     margin: 0;
+    padding-bottom: 0;
   }
 
   @media (min-width: @desktop-width) {
